# my_mini_claude_code

./: .env.example  .gitignore  README.md  mini_claude_code.py  pyproject.toml  pytest.ini  requirements.txt
docker/: Dockerfile  docker-compose.yml
docs/: full-audit-report.md  future_plan.md  project-issues-report.md
docs/beginner/: architecture-guide.md  code-reading-guide.md
docs/problem_v1/: codebase-issues-report.md  langsmith_problem.txt  langsmith_problem_1.txt
docs/superpowers/plans/: 2026-04-29-enterprise-agent-refactor.md
docs/superpowers/specs/: 2026-05-08-file-manager-design.md
enterprise_agent/: __init__.py
enterprise_agent/api/: __init__.py  main.py
enterprise_agent/api/middleware/: __init__.py  auth.py
enterprise_agent/api/routes/: __init__.py  auth.py  chat.py  workspace.py
enterprise_agent/auth/: __init__.py  jwt_handler.py  permissions.py
enterprise_agent/config/: __init__.py  settings.py
enterprise_agent/core/: __init__.py
enterprise_agent/db/: __init__.py  chroma.py  mysql.py  redis.py
enterprise_agent/memory/: __init__.py  base.py  decay.py  importance.py  long_term.py  pattern_extractor.py  short_term.py
enterprise_agent/models/: __init__.py  api_key.py  conversation.py  session.py  tool_usage.py  user.py  user_pattern.py
enterprise_agent/utils/: __init__.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue
scripts/: init_db.py
tests/: README.md  __init__.py  conftest.py
tests/core/: test_nodes.py  test_state.py
tests/memory/: test_memory.py
(+37 files in other folders)
