[project]
name = "enterprise-agent"
version = "0.1.0"
description = "Enterprise-level multi-user AI Agent system with LangGraph"
requires-python = ">=3.11"
dependencies = [
    # Core
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-anthropic>=0.3.0",
    # API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.20",
    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "aiomysql>=0.2.0",
    "redis[asyncio]>=5.0.0",
    "alembic>=1.14.0",
    # Auth
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic[email]>=2.10.0",
    "pydantic-settings>=2.0.0",
    # Utils
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "structlog>=25.0.0",
    "langchain-openai>=1.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.0",
    "ruff>=0.1.0",
]

[project.scripts]
serve = "enterprise_agent.api.main:run"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
select = ["E", "F", "I", "N"]
